stationモデルを削除後、カラム名を変更してstationモデルを再作成, new画面とmodel.ja.ymlも修正

--- a/test/fixtures/stations.yml
+++ b/test/fixtures/stations.yml
@@ -2,12 +2,12 @@
 
 one:
   line: MyString
-  name: MyString
-  walk: 1
+  nearest_station: MyString
+  on_foot: 1
   property: one
 
 two:
   line: MyString
-  name: MyString
-  walk: 1
+  nearest_station: MyString
+  on_foot: 1
   property: two
